# ssorai_pcg

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
data/: 128_block.1  128_block.128  128_block.16  128_block.2  128_block.32  128_block.4  128_block.64  128_block.8  16_block.1  16_block.16  16_block.2  16_block.32  16_block.4  16_block.64  16_block.8  1_block.1  1_block.16  1_block.2  1_block.32  1_block.4  1_block.64  1_block.8  2_block.1  2_block.16  2_block.2  2_block.32  2_block.4  2_block.64  2_block.8  32_block.1  32_block.16  32_block.2  32_block.32  32_block.4  32_block.64  32_block.8  4_block.1  4_block.16  4_block.2  4_block.32  (+32 more)
include/: DenseVector.hpp  DevicePtr.cuh  Error.cuh  GpuSolve.cuh  LinearSolve.hpp  Parallel.cuh  SparseMatrix.hpp  SparseMatrixBase.hpp  allocater.hpp  gpu_memory.cuh
src/: BuildMatrix.cu  Dotprod.cu  Main.cpp  Main.cu  MatTest.cpp  MatVec.cu  MatVecTest.cu  Parallel.cu  SsoraInveser.cpp  SsoraiGpu.cu  VecTest.cpp  VecTestGpu.cu
test/: BuildMatrix.cu  Dotprod.cu  MatVec.cu  SsoraiGpu.cu  VecTestGpu.cu
